--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -9,7 +9,19 @@
     <h2>Search!</h2>
 
     <form method="get" action="{% url "rooms:search" %}">
-        <div>
+       {{form.as_p}}
+       <button>Search</button>
+    </form>
+
+    <h3>Results</h3>
+
+    {% for room in rooms %}
+        <h4>{{room.name}}</h4>
+    {% endfor %}
+
+{% endblock content %}
+
+ <!--<div>
             <label for="city">City</label>
             <input value="{{city}}" id="city" name="city" placeholder="Search by City" />
         </div>
@@ -17,7 +29,10 @@
             <label for="country">Country</label>
             <select id="country" name="country">
                 {% for country in countries %}
-                    <option value="{{ country.code }}" {% if country.code == s_country %}selected{% endif %}>
+                    <option 
+                        value="{{ country.code }}" 
+                        {% if country.code == s_country %}selected{% endif %}
+                        >
                         {{country.name}}
                     </option>
                 {% endfor %}
@@ -28,7 +43,10 @@
             <select id="room_types" name="room_type">
                 <option value="0">Any Kind</option>
                 {% for room_type in room_types %}
-                    <option value="{{ room_type.pk }}" {% if s_room_type == room_type.pk %}selected{% endif %}>
+                    <option 
+                        value="{{ room_type.pk }}" 
+                        {% if s_room_type == room_type.pk %}selected{% endif %}
+                        >
                         {{room_type.name}}
                     </option>
                 {% endfor %}
@@ -57,12 +75,12 @@
         <div>
             <label for="instant">Instant Book Only?</label>
             <input type="checkbox" name="instant" id="instant" 
-                {% if instant %} checked {% endif %}/>
-        </div>
+                {% if instant %} checked {% endif %}/> <!-- on/off check
+        </div> 
         <div>
-            <label for="super_host">By Superhost Only?</label>
-            <input type="checkbox" name="super_host" id="super_host" 
-                {% if super_host %} checked {% endif %} />
+            <label for="superhost">By Superhost Only?</label>
+            <input type="checkbox" name="superhost" id="superhost" 
+                {% if superhost %} checked {% endif %} /> <!-- on/off check
         </div>
         <div>
             <h3>Amenities</h3>
@@ -76,9 +94,9 @@
                             type="checkbox" 
                             value={{amenity.pk}}
                             {% if amenity.pk|slugify in s_amenities %}
-                                checked
+                                checked 
                             {% endif %}
-                            />
+                            /><!-- remember user checked 
                     </li>
                 {% endfor %}
             </ul>
@@ -102,7 +120,4 @@
                 {% endfor %}
             </ul>
         </div>
-        <button>Search</button>
-    </form>
-
-{% endblock content %}
+          -->
