--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
     <title>{% block page_title %}{% endblock page_title %}| Dbnb</title>
 </head>
 <body>
