--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,22 @@
 <html>
 <head>
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
-    <title>{% block page_title %}{% endblock page_title %}| Dbnb</title>
+    <title>{% block page_title %}Home {% endblock page_title %}| Dbnb</title>
 </head>
-<body>
-    <header>
+<body class="text-gray-700">
+    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b">
+        <div class="flex items-center w-1/3">
+            <a href="{% url "core:home" %}" class="mr-8">
+                <img class="w-8" src="{% static 'img/logo.png' %}" />
+            </a>
+            {% block search-bar %}
+            <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
+                <input class="search-box w-full border px-4 text-sm font-medium placeholder-gray-600 py-2 round-sm w-64 shadow-md hover:shadow-lg focus:outline-none" 
+                name="city" placeholder="Search by City" />
+            </form>        
+            {% endblock search-bar %}
+        </div>
         {% include "partials/nav.html" %}
-        {% block search-bar %}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input name="city" placeholder="Search by City" />
-            </form>
-        {% endblock search-bar %}
     </header>
 
     {% block content %}{% endblock %}
