--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="{% static "css/styles.css" %}">
+    <link rel="stylesheet" href="{% static "css/styles.css" %}"> <!-- designed by tailwindCSS-->
     <title>{% block page_title %}Home {% endblock page_title %}| Dbnb</title>
 </head>
 <body class="text-gray-700">
