--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="{% static "css/styles.css" %}"> <!-- designed by tailwindCSS.. -->
     <title>{% block page_title %}Home {% endblock page_title %}| Dbnb</title>
 </head>
-<body class="text-gray-700">
-    <header class="container max-w-full flex items-center justify-between px-6 h-20 border-b">
+<body class="text-gray-800 mt-24">
+    <header class="container max-w-full inset-0 flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
         <div class="flex items-center w-1/3">
             <a href="{% url "core:home" %}" class="mr-8">
                 <img class="w-8" src="{% static 'img/logo.png' %}" />
