--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,8 +1,8 @@
-<ul class="flex items-center text-sm font-medium">
+<ul class="flex items-center text-sm font-medium h-full">
     {% if user.is_authenticated %}
-        <li class="mr-8"><a href="{% url "users:logout" %}">Log out</a></li>
+        <li class="nav_link"><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
-        <li class="mr-8 border-b-2 border-white hover:border-blue-400"><a href="{% url "users:login" %}">Log in</a></li>
-        <li class="mr-8"><a href="{% url "users:signup" %}">Sign up</a></li>
+        <li class="nav_link"><a class="py-10" href="{% url "users:login" %}">Log in</a></li>
+        <li class="nav_link"><a class="py-10" href="{% url "users:signup" %}">Sign up</a></li>
     {% endif %}
 </ul>
