--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -2,24 +2,29 @@
 
 {% block content %}
 
-    {% for room in rooms %} <!-- rooms(render, request) -> self(ListView) -->
-        <h3> 
-            <a href="{% url "rooms:detail" room.pk %}">
-                {{room.name}} / ${{room.price}}
-            </a>
-        </h3>
-    {% endfor %}
+    <div class="container mx-auto">
+        <div class="container rounded-xl bg-gray-800 -mx-40 h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1538485399081-7191377e8241?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1955&q=80/wepDTOWs4d0)"></div>
 
-    <h5>
-        {% if page_obj.has_previous %}
-            <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-        {% endif %}
+        <div class="flex flex-wrap -mx-40">
+            {% for room in rooms %} <!-- rooms(render, request) -> self(ListView) -->
+                {% include 'partials/room_card.html' with room=room %}
+            {% endfor %}
+        </div>
 
-        Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+        <h5>
+            {% if page_obj.has_previous %}
+                <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+            {% endif %}
 
-        {% if page_obj.has_next %}
-            <a href="?page={{page_obj.next_page_number}}">Next</a>
-        {% endif %}
-    </h5>
+            Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+
+            {% if page_obj.has_next %}
+                <a href="?page={{page_obj.next_page_number}}">Next</a>
+            {% endif %}
+        </h5>
+
+    </div>
+
+    
 
 {% endblock %}
