--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    &copy; Dbnb
+<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
+    &copy; Dbnb, All rights reserved.
 </footer>
