--- a/templates/partials/room_card.html
+++ b/templates/partials/room_card.html
@@ -1,3 +1,18 @@
 <div class="w-1/4 mb-10 px-2">
-    <div class="w-full h-64 rounded-lg bg-cover bg-center" style="background-image: url({{room.first_photo}});"></div>
+    <a href="{% url 'rooms:detail' room.pk %}">
+        <div class="w-full h-64 rounded-lg bg-cover bg-center mb-3" style="background-image: url({{room.first_photo}});"></div>
+        <div class="flex justify-between mb-2">
+            <div class="w-4/5 overflow-hidden flex">
+                {% if room.host.superhost %}
+                    <span class="mr-2 uppercase font-medium text-xs border border-black rounded py-px px-1">superhost</span>
+                {% endif %}
+                <span class="text-sm text-gray-400 truncate">{{room.city}}, {{room.country.name}}</span>
+            </div>
+            <span class="text-sm flex items-center">
+                <i class="fas fa-star text-red-500 text-xs mr-1"></i>
+                {{room.total_rating}}
+            </span>
+        </div>
+        <span class="w-11/12 block truncate">{{room.name}}</span>
+    </a>
 </div>
