--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,8 +1,8 @@
-<div>
-    <a href="{% url 'users:github-login' %}">
-        Continue with Github
+<div class="flex flex-col w-full">
+    <a href="{% url 'users:github-login' %}" class="btn w-full border-2 text-white mb-2 bg-gray-700 border-gray-700">
+        <i class="fab fa-github mr-2 fa-lg"></i> Continue with Github
     </a>
-    <a href="{% url 'users:kakao-login' %}">
-        Continue with Kakao
+    <a href="{% url 'users:kakao-login' %}" class="btn w-full border-2 text-gray-700 mb-2 bg-yellow-400 border-yellow-400">
+        <i class="fas fa-comment mr-2 fa-lg"></i> Continue with Kakao
     </a>
 </div>
