--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -9,11 +9,42 @@
 
 {% block content %}
 
-    {% include 'partials/social_login.html' %}
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center p-6 border border-gray-400">
 
-    <form method="POST" action="{% url "users:signup" %}">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button>Sign Up</button>
-    </form>
+        {% include 'partials/social_login.html' %}
+
+        <div class="flex items-center w-full my-3">
+            <div class="h-px w-full bg-gray-400"></div>
+            <span class="text-gray-600 font-medium mx-2 text-sm">or</span>
+            <div class="h-px w-full bg-gray-400"></div>
+        </div>
+
+        <form method="POST" action="{% url 'users:signup' %}" class="w-full">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <span class="text-red-700 font-medium text-sm">{{error}}</span>
+                {% endfor %}
+            {% endif %}
+
+            {% for field in form %}
+                <div class="input {% if field.errors %}has_error{% endif %}">
+                    {{field}}
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <span class="text-red-700 font-medium text-sm">{{error}}</span>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+
+            <button class="btn w-full bg-red-400 text-white">Sign up</button>
+        </form>
+
+        <div class="flex mt-5">
+            <span class="mr-8">Have an acoount?</span>
+            <a href="{% url 'users:login' %}" class="text-teal-500 font-medium">Log in</a>
+        </div>
+    </div>
 {% endblock content%}
