--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -6,3 +6,9 @@
         <i class="fas fa-comment mr-2 fa-lg"></i> Continue with Kakao
     </a>
 </div>
+
+<div class="flex items-center w-full my-3">
+    <div class="h-px w-full bg-gray-400"></div>
+    <span class="text-gray-600 font-medium mx-2 text-sm">or</span>
+    <div class="h-px w-full bg-gray-400"></div>
+</div>
