--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -13,34 +13,7 @@
 
         {% include 'partials/social_login.html' %}
 
-        <div class="flex items-center w-full my-3">
-            <div class="h-px w-full bg-gray-400"></div>
-            <span class="text-gray-600 font-medium mx-2 text-sm">or</span>
-            <div class="h-px w-full bg-gray-400"></div>
-        </div>
-
-        <form method="POST" action="{% url 'users:signup' %}" class="w-full">
-            {% csrf_token %}
-
-            {% if form.non_field_errors %}
-                {% for error in form.non_field_errors %}
-                    <span class="text-red-700 font-medium text-sm">{{error}}</span>
-                {% endfor %}
-            {% endif %}
-
-            {% for field in form %}
-                <div class="input {% if field.errors %}has_error{% endif %}">
-                    {{field}}
-                    {% if field.errors %}
-                        {% for error in field.errors %}
-                            <span class="text-red-700 font-medium text-sm">{{error}}</span>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            {% endfor %}
-
-            <button class="btn w-full bg-red-400 text-white">Sign up</button>
-        </form>
+        {% include 'partials/auth_form.html' with form=form cta="Sign up" %}
 
         <div class="flex mt-5">
             <span class="mr-8">Have an acoount?</span>
