--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
 
     {% block content %}{% endblock %}
 
+    {% include "partials/messages.html" %}
     {% include "partials/footer.html" %}
 
 </body>
