--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,4 +1,4 @@
-<form method="POST" class="w-full">
+<form method="POST" class="w-full" enctype="multipart/form-data"> <!-- enctype -> upload file to backend -->
     {% csrf_token %}
 
     {% if form.non_field_errors %}
