--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -85,6 +85,8 @@
                 </div>
             </div>
         </div>
-        <div class="w-1/3"></div>
+        <div class="w-1/3">
+            <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
+        </div>
     </div>
 {% endblock %}
