--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -86,7 +86,9 @@
             </div>
         </div>
         <div class="w-1/3">
-            <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
+            {% if room.host == user %}
+                <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
