--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
+{% load "self_capitals" %}
 
 {% block page_title %}
     {{room.name}}
 {% endblock page_title %}
 
 {% block content %}
+    <!-- Photo View Design -->
     <div class="-mt-5 container max-w-full h-75vh flex mb-20">
         <div class="h-full w-1/2 bg-cover" style="background-image:url({{room.first_photo}})"></div>
         <div class="h-full w-1/2 bg-cover bg-center flex flex-wrap">
@@ -14,10 +16,12 @@
         </div>
     </div>
 
+    <!-- Room name & info -->
     <div class="container mx-auto flex justify-around pb-56">
+        <!-- left Section -->
         <div class="w-1/2">
             <div class="flex justify-between mb-5">
-                <div>
+                <div class="mr-5">
                     <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
                     <span class="text-gray-700 font-light">{{room.city}}</span>
                 </div>
@@ -85,12 +89,41 @@
                 </div>
             </div>
         </div>
+        <!-- Right Section -->
         <div class="w-1/3">
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
             {% else %}
                 {% if not request.session.is_hosting %}
-                    {{room.get_calendars}}
+                    {% for calendar in room.get_calendars %}
+                        <div class="mb-20">
+                            <span class="font-medium text-center text-lg block mb-8">
+                                {{calendar.get_month}}/{{calendar.year}}
+                            </span>
+                            <div class="cal-grid mb-4">
+                                {% for day_name in calendar.day_names %}
+                                    <span>{{day_name}}</span>
+                                {% endfor %}
+                            </div>
+                            <div class="cal-grid">
+                                {% for day in calendar.get_days %}
+                                    {% if day.number != 0 %}
+                                        {% if day.past %}
+                                            <span class="rounded bg-gray-200 text-center w-full p-1 text-gray-300">
+                                                {{day}}
+                                            </span>
+                                        {% else %}
+                                            <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-500 hover:text-white hover:cursor-pointer">
+                                                {{day}}
+                                            </span>
+                                        {% endif %}
+                                    {% else %}
+                                        <span></span>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endfor %}
                 {% endif %}
             {% endif %}
         </div>
