--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load "self_capitals" %}
+{% load is_booked %}
 
 {% block page_title %}
     {{room.name}}
@@ -107,13 +107,18 @@
                             </div>
                             <div class="cal-grid">
                                 {% for day in calendar.get_days %}
+                                    {% is_booked room day as is_booked_bool %}
                                     {% if day.number != 0 %}
                                         {% if day.past %}
-                                            <span class="rounded bg-gray-200 text-center w-full p-1 text-gray-300">
+                                            <span class="cal-number bg-gray-200 text-gray-400">
+                                                {{day}}
+                                            </span>
+                                        {% elif is_booked_bool %}
+                                            <span class="cal-number bg-gray-200 text-gray-400 line-through">
                                                 {{day}}
                                             </span>
                                         {% else %}
-                                            <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-500 hover:text-white hover:cursor-pointer">
+                                            <span class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-500 hover:text-white hover:cursor-pointer">
                                                 {{day}}
                                             </span>
                                         {% endif %}
