--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -118,9 +118,9 @@
                                                 {{day}}
                                             </span>
                                         {% else %}
-                                            <span class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-500 hover:text-white hover:cursor-pointer">
+                                            <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-500 hover:text-white hover:cursor-pointer">
                                                 {{day}}
-                                            </span>
+                                            </a>
                                         {% endif %}
                                     {% else %}
                                         <span></span>
