--- a/templates/reservations/detail.html
+++ b/templates/reservations/detail.html
@@ -32,10 +32,21 @@
             </div>
 
             <div class="py-10 px-5">
-                {% if reservation.status == 'pending' %}
-                    <a href="{% url 'reservations:edit' reservation.pk 'cancel' %}" class="btn-link block px-3 mb-5">Cancel Reservation</a>
-                    {% if reservation.room.host == user %}
-                        <a href="{% url 'reservations:edit' reservation.pk 'confirm' %}" class="btn-link block px-3">Confirm Reservation</a>
+                {% if reservation.status != 'canceled' %}
+                    {% if reservation.status == 'confirm' and reservation.is_finished %}
+                        <span class="font-medium text-2xl text-center w-full block mb-5">Write your Review</span>
+                        <form action="{% url 'reviews:create' reservation.room.pk %}" method="POST" class="w-1/2 mx-auto">
+                            {% csrf_token %}
+                            {{form}}
+                            <button class="btn-link">Submit Review</button>
+                        </form>
+                    {% else %}
+                        {% if reservation.status == 'pending' %}
+                            <a href="{% url 'reservations:edit' reservation.pk 'cancel' %}" class="btn-link block px-3 mb-5">Cancel Reservation</a>
+                            {% if reservation.room.host == user %}
+                                <a href="{% url 'reservations:edit' reservation.pk 'confirm' %}" class="btn-link block px-3">Confirm Reservation</a>
+                            {% endif %}
+                        {% endif %}
                     {% endif %}
                 {% endif %}
             </div>
